# Torch-Utils

./: Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  basic.yml  codecov.yml
contracts/mpc1-multisig/: Cargo.toml
contracts/mpc1-multisig/src/: contract.rs  lib.rs  state.rs  tests.rs
contracts/mpc1155/: Cargo.toml
contracts/mpc1155/src/: contract.rs  state.rs  tests.rs
contracts/mpc20/: Cargo.toml
contracts/mpc20-byoc/: Cargo.toml
contracts/mpc20-byoc/src/: contract.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/mpc20-staking/: Cargo.toml
contracts/mpc20-staking/src/: contract.rs  state.rs  tests.rs
contracts/mpc20/src/: contract.rs  lib.rs  state.rs  tests.rs
contracts/mpc721/: Cargo.toml  README.md
contracts/mpc721-payable-mint/: Cargo.toml
contracts/mpc721-payable-mint/.cargo/: config
contracts/mpc721-payable-mint/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/mpc721/src/: contract.rs  lib.rs  state.rs  tests.rs
