[package]
name = "mpc721_payable_mint"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.partisiablockchain]
cargo-partisia = "0.2.9"

[dependencies]
pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "9.1.1" }
pbc_traits = { git = "https://git@gitlab.